webapp/website/dashboard.css
/* --------------
 * Navbar
 * -------------- */

.navbar {
    position: relative;
}

.navbar-brand {
    position: absolute;
    left: 50%;
    margin-left: -51px;
    display: block;
}

.navbar-icon {
    color: white;
    background-color: #555a5d;
    border: none;
}

.search-bar {
    background-color: #555a5d;
    color: white;
    border: none;
}

@media (max-width: 750px) {
    .navbar-brand {
        left: 16px;
        margin-left: 0;
    }

    .navbar {
        height: 20%;
    }

    .search-bar {
        display: none;
    }

    .search-icon {
        display: inline-block;
    }
}

@media (min-width: 751px) {
    .search-icon {
        display: none;
    }
}

/* --------------
 * Main content
 * -------------- */

.main {
    margin: 20px;
}

/* --------------
 * Cards
 * -------------- */

.card {
    margin: 5px;
}

.card-img-top {
    max-width: 100%;
    margin: 0 auto;
    display: block;
}

/* --------------
 * Notification center
 * -------------- */

.notifications {
    margin-top: 55px;
    background-color: #373a3c;
    color: white;
}

.notifications {
    min-width: 420px;
}

.notifications-wrapper {
    overflow: auto;
    max-height: 450px;
}

.menu-title {
    font-size: 1.2rem;
    display: inline-block;
}

.notification-heading, .notification-footer {
    padding: 2px 10px;
}

.dropdown-menu.divider {
    margin: 5px 0;
}

.item-title {
    font-size: 1rem;
    color: white;
}

.notifications a.content {
    text-decoration: none;
    background: #555a5d;
}

.notification-item {
    padding: 10px;
    margin: 5px;
    background: #555a5d;
    border-radius: 4px;
}

.notification-item .item-info {
    color: #9ad0fe;
}

